--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@ body {
   font-family: 'Roboto Slab',sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(237, 209, 209);
 }
 
 code {
